--- a/i18n/templates/4-index.html
+++ b/i18n/templates/4-index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>{{ _('home_title') }}</title>
-</head>
-<body>
-    <h1>{{ _('home_header') }}</h1>
-</body>
+  <head>
+    <title>{{ gettext('home_title') }}</title>
+  </head>
+  <body>
+    <h1>{{ gettext('home_header') }}</h1>
+  </body>
 </html>
